[metadata]
name = sanicloak
version = 0.0.1
author = EdC
author_email = etienne@translatorswithoutborders.org
description = Make Keycloak play nice with sanic apps (OpenID only)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/E-dC/sanicloak
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
packages = sanicloak
install_requires =
    sanic >= 22.3.0
    python-keycloak == 0.27.0
    urllib3 >= 1.26.9
python_requires = >=3.7

